syntax = "proto3";

package modeler;
option go_package="./modeler";

message DLModel {
    string name = 1;
    string path = 2;
    bool status = 3; // 模型是否可用
    string inputType = 4;
    string outputType = 5;
}

message DLDataOBJ{
    string Database=1;
    string name=2;
    bool status = 3; // 该数据对象是否可用
    int64 total=4;
    string type = 5;
}

message DLData {
    string index = 1;
    bool status = 2; // 该数据是否可用
    string deal = 3; // 该数据结束到哪个流程了，后面这个要变成枚举
}

message setDLModelRequest{
    string path = 1;
}

message setDLDataRequest{
    string Database=1;
}

service DLModeler {
    rpc initDLModel (setDLModelRequest) returns (DLModel);
    rpc initDLData (setDLDataRequest) returns (DLDataOBJ);
}
